--- a/css/style.css
+++ b/css/style.css
@@ -645,7 +645,7 @@ input[type="submit"]:hover {
         padding: 13px 17px;
         bottom: 0;  
         top: 70%;
-        transform: translateY(0);
+        transform: translateY(5%);
     }
     .main_copy p {
         font-size: 1.25rem;
@@ -787,7 +787,7 @@ input[type="submit"]:hover {
         display: inline;
     }
     #news {
-        padding: 45px 20px 45px;
+        padding: 45px 20px 52px;
     }   
     .news-with-images{
         margin-bottom: 45px;
@@ -795,30 +795,27 @@ input[type="submit"]:hover {
     .news-item {
         display: block;
         text-align: left;
+        margin: 16px 0;
     }
     .news-date {
         margin-left: 8px;
         font-size: 1.0625rem;
-
     }
     .news-title {
-        margin-left: 8px;
-        margin-top: 10px;
-        margin-bottom: 15px;
+        margin-left: 8px;  
+        margin-bottom: 5px; 
     }
     .news-text {
         margin-left: 8px;
-        margin-top: 5px;
         font-size: 1rem;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
         width: 95%;
     }
     .news-text2 {
-        margin-left: 8px;
-        margin-top: 5px;
+        margin-left: 8px; 
         white-space: nowrap;
         font-size: 1rem;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
 
     }
     #access {
