--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ a {
 }
 .service-with-images {
     display: flex;
-    gap: 16px;
+    gap: 20px;
     margin-bottom: 48px;
     align-items: center;
     justify-content: center;
@@ -616,6 +616,15 @@ input[type="submit"]:hover {
     width: 22px;
     height: auto;
 }
+@media screen and (min-width:769px) {
+    .pc_none{
+        display: none!important;
+    }  
+    .title {
+        margin-left: 40px;
+    }
+    
+}
 @media screen and (max-width:768px) {
     .sp_none{
         display: none!important;
@@ -757,6 +766,9 @@ input[type="submit"]:hover {
     .br-sp {
         display: inline;
     }
+    .br-pc {
+        display: none;
+    }
     #service {
         padding: 45px 0 0;
     }
@@ -774,6 +786,7 @@ input[type="submit"]:hover {
     }
     .service-content h3 {
         font-size: 1.25rem;
+        margin-bottom: 7px;
     }
     .service-content img {
         margin-bottom: 25px;
@@ -782,7 +795,7 @@ input[type="submit"]:hover {
         object-fit: cover;
     }
     .service-content p {
-        margin-bottom: 35px;
+        margin-bottom: 39px;
         font-size: 1rem;
     }
     .item-list {
@@ -819,10 +832,9 @@ input[type="submit"]:hover {
     }
     .news-text2 {
         margin-left: 8px; 
-        white-space: nowrap;
+        white-space: wrap;
         font-size: 1rem;
         margin-bottom: 5px;
-
     }
     #access {
         padding: 43px 20px 50px;
@@ -955,9 +967,9 @@ input[type="submit"]:hover {
 }
 @media screen and (max-width: 320px){
     .main_copy {
-    width: 90%;
+    width: 95%;
     top: 15.5%;
-    transform: translateY(50%);
+    transform: translateY(160%);
     padding: 12px 16px;
     bottom: auto;  
   }
@@ -967,8 +979,28 @@ input[type="submit"]:hover {
   }
   .main_copy h1 {
     font-size: 1.84375rem;
+    max-width: 100%;
   }
-}
+  .br-sp {
+    display: none;
+  }
+  .br-pc {
+    display: none;
+  }
+  .strengths-text-area2 h4 {
+    font-size: 1.05rem;
+  }
+  .strengths-text-area3 h4 {
+    font-size: 1.05rem;
+  }
+  .strengths-text-area2 p {
+    width: 100%;
+  }
+  .address-text .post,
+  .address-text .address {
+    display: inline-block;
+  }
 body, input, textarea, button, select {
   font-family: "Noto Sans JP", sans-serif;
+}
 }
