--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,10 @@ a {
     left: 0;
     padding: 23px 35px 23px 99px;
     top: 50%;
-    transform:translateY(-50%);
+    transform:translateY(-48%);
+    width: 100%;
+    max-width: 492px;
+    box-sizing: border-box;
 }
 .main_copy p {
     font-size: 1.5625rem;
@@ -531,6 +534,9 @@ textarea {
     resize: none;
     border: none;
     outline: none;
+    font-size: 1rem;
+    line-height: 30px;
+    padding: 10px 15px;
 }
 .contact_button {
     margin-top: 48px;
@@ -623,6 +629,10 @@ input[type="submit"]:hover {
     .title {
         margin-left: 40px;
     }
+    .footer-nav_lists {
+        padding: 21px 36px;
+    }
+
     
 }
 @media screen and (max-width:768px) {
@@ -661,6 +671,8 @@ input[type="submit"]:hover {
         bottom: 0;  
         top: 70%;
         transform: translateY(5%);
+        width: 100%;
+        max-width: 311px;
     }
     .main_copy p {
         font-size: 1.25rem;
@@ -898,12 +910,13 @@ input[type="submit"]:hover {
         margin-top: 5px;
     }
     .contact_button {
-        width: 100%;
+        width: 335px;
     }
     .contact_button input[type="submit"] {
         padding: 1px 0;
         font-size: 1.25rem;
         height: 41px;
+        color: #50201b;
     } 
     .footer {
         padding: 30px 0 50px;
@@ -999,6 +1012,9 @@ input[type="submit"]:hover {
   .address-text .post,
   .address-text .address {
     display: inline-block;
+  }
+  .footer_copyright .name {
+    display: block;
   }
 body, input, textarea, button, select {
   font-family: "Noto Sans JP", sans-serif;
