--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,17 @@ a {
     padding: 15px 0;
     border-bottom: 1px solid #707070;
     display: grid;
-    grid-template-columns: 97px 200px 500px;
+    
+}
+.news-item a {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+}
+.news-item a span,
+.news-item a p {
+    display: inline-block; /* 横に並べられるようにする */
+
 }
 .news-date {
     color: #505050;
@@ -378,7 +388,7 @@ a {
     color: #0D96A0;
     font-weight: 700;
     text-decoration: none;
-    margin-left: 40px;
+    margin-left: 25px;
     font-size: 2rem;
 }
 .news-text,
@@ -699,13 +709,13 @@ input[type="submit"]:hover {
         padding: 13px 17px;
         bottom: 0;  
         top: auto;
-        transform:none;
+        transform: none;
         width: 100%;
         max-width: 311px;
+        height: 148px;
     }
     .main_copy p {
         font-size: 2rem;
-        margin-top: 5px;
         margin-bottom: 7px;
     }
     .main_copy h1 {
@@ -992,7 +1002,7 @@ input[type="submit"]:hover {
 }
 .access-text-area .address,
 .access-text-area .post {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 .access-text-area .number {
     font-size: 2.5rem;
@@ -1019,12 +1029,12 @@ input[type="submit"]:hover {
     vertical-align: middle;
 }
 @media screen and (max-width: 320px){
-    .main_copy {
+  .main_copy {
     width: 95%;
-    top: 15.5%;
-    transform: translateY(160%);
+    top: auto;
+    transform: none;
     padding: 12px 16px;
-    bottom: auto;  
+    bottom: 0;  
   }
   .main_copy p {
     font-size: 1.25rem;
