--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,9 @@ a {
 .strengths-item {
     display: flex;
     max-width: 880px;
-    margin: 0 auto;
+    margin: 0 auto 45px;
     justify-content: flex-start;
+    align-items: center;
 }
 .strengths-item.reverse {
     flex-direction: row-reverse;
@@ -215,7 +216,7 @@ a {
     display: block;
     width: 50%;
     margin-right: 45px;
-    margin-top: 48px;
+    align-items: center;
 }
 .strengths-text-area h4 {
     font-weight: 700; 
@@ -232,8 +233,8 @@ a {
     display: block;
     width: 50%;
     margin-left: 47px;
-    margin-top: 48px; 
     text-align: left; 
+    align-items: center;
 }
 .strengths-text-area2 h4 {
     font-weight: 700; 
@@ -250,7 +251,7 @@ a {
 .strengths-text-area3 {
     display: block;
     width: 50%;
-    margin-top: 48px; 
+    align-items: center;
     text-align: left; 
     margin-right: 45px;
 }
@@ -271,7 +272,7 @@ a {
 }
 .strengths-img-area {
     max-width: 440px;
-    margin-bottom: 45px;
+   
 }
 .strengths-img-area img {
     width: 100%;
@@ -669,6 +670,9 @@ input[type="submit"]:hover {
     }
     .sp-only {
         display: block;
+    }
+    .br-pc {
+        display: none;
     }
     .footer-nav_lists {
         padding: 21px 36px;
