--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ a {
 .container {
     font-size: 1.6rem;
     max-width: 1080px;
-    padding: 0 30px;
+ 
     margin: 0 auto;
 }
 .inner {
@@ -74,11 +74,11 @@ a {
     display: flex;
     align-items: center;
     cursor: pointer; 
-    margin-left: 69px;
+    margin-left: 99px;
+    line-height: 33px;
 }
 .header-title {
     transition: color 0.5s ease, opacity 0.5s ease;
-
 }
 .nav_content {
     margin-left: auto;
@@ -103,9 +103,10 @@ a {
     align-items: center;
     list-style: none;
     color: #505050;
-
+    line-height: 33px;
     font-weight: 700;
-    margin-right: 30px;
+    margin-right: 60px;
+    font-size: 1.4rem;
 }
 .header_nav li:not(:first-of-type) {
     margin-left: 10px;
@@ -141,12 +142,13 @@ a {
     font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 8px;
+    line-height: 100%;
 }
 .main_copy h1 {
     font-size: 4rem;
     color: #0D96A0;
-    line-height: 1.5;
     font-weight: 700;
+    line-height: 60px;
 }
 .message {
     width: 100%;
@@ -167,12 +169,13 @@ a {
     font-weight: 700;
     color: #0D96A0;
     padding-bottom: 20px;
+    line-height: 50px;
 }
 .message p {
     text-align: center;
     font-size: 1.8rem;
     color: #505050; 
-    line-height: 1.8;
+    line-height: 33px;
     font-weight: 500;
 }
 .message img {
@@ -222,12 +225,14 @@ a {
     font-weight: 700; 
     font-size:2.2rem;
     margin-bottom: 19px;
+    line-height: 33px;
 }
 .strengths-text-area p {
     font-size: 1.8rem;
     text-align: left;
     font-weight: 500;
     line-height: 1.8;
+    line-height: 33px;
 }
 .strengths-text-area2 {
     display: block;
@@ -240,13 +245,14 @@ a {
     font-weight: 700; 
     font-size: 2.2rem;
     margin-bottom: 21px;
+    line-height: 33px;
 }
 .strengths-text-area2 p {
     font-size: 1.8rem;
     text-align: left;
     font-weight: 500;
     width: 105%;
-    line-height: 1.8;
+    line-height: 33px;
 }
 .strengths-text-area3 {
     display: block;
@@ -259,13 +265,14 @@ a {
     font-weight: 700; 
     font-size: 2.2rem;
     margin-bottom: 21px;
+    line-height: 33px;
 }
 .strengths-text-area3 p {
     font-size: 1.8rem;
     text-align: left;
     font-weight: 500;
     width: 101%;
-    line-height: 1.8;
+    line-height: 33px;
 }
 .nowrap {
     white-space: nowrap;
@@ -295,6 +302,7 @@ a {
 .service-with-images h2 {
     margin: 0;
     font-size: 2.5rem;
+    line-height: 100%;
 }
 .service-list {
     display: flex;
@@ -314,11 +322,12 @@ a {
     margin: 0;
     text-align: center;
     margin-bottom: 10px;
+    line-height: 25px;
 }
 .service-content p {
     font-size: 1.7rem;
     font-weight: 500;
-    line-height: 1.7;
+    line-height: 30px;
 }
 .service-list {
     font-size: 1.0625rem;
@@ -351,6 +360,7 @@ a {
     margin: 0;
     font-size: 2.5rem;
     font-weight: 700;
+    line-height: 100%;
 }
 .news-icon {
     width: 25.49px;
@@ -383,7 +393,8 @@ a {
     font-weight: 700;
     margin-left: 19px;
     font-size: 1.7rem;
-    transform: scale(1, 0.9);   
+    transform: scale(1, 0.9); 
+    line-height: 25px;  
 }
 .news-title {
     color: #0D96A0;
@@ -391,6 +402,7 @@ a {
     text-decoration: none;
     font-size: 2rem;
     display: block;
+    line-height: 25px;
 }
 .news-text,
 .news-text2 {
@@ -398,6 +410,7 @@ a {
     font-weight: 500;
     margin: 0;
     font-size: 1.7rem;  
+    line-height: 30px;
 }
 #access {
     padding: 63px 0 80px;
@@ -414,6 +427,7 @@ a {
     margin: 0;
     font-size: 2.5rem;
     font-weight: 700;
+    line-height: 100%;
 }
 .access-icon {
     width: 25.49px;
@@ -443,14 +457,17 @@ a {
 .access-text-area h5 {
     font-size: 2.2rem;
     font-weight: 700;
+    line-height: 33px;
 }
 .post {
     margin-right: 15px;
     font-size: 1.8rem;
     font-weight: 500;
+    line-height: 27px;
 }
 .address  {
     font-size: 1.8rem;
+    line-height: 27px;
 }
 .access-contact {
     display: flex;
@@ -465,6 +482,7 @@ a {
     line-height: 2.2;
     margin: 0;
     font-weight: 500;
+    line-height: 40px;
 }
 .contact-info {
   display: flex;
@@ -483,6 +501,9 @@ a {
 .contact-info .number {
   display: inline-block;
   color: #0D96A0;
+  line-height: 40px;
+  font-weight: 700;
+  font-size: 2.5rem;
 }
 #contact {
     padding: 62px 0 83px;
@@ -499,19 +520,19 @@ a {
     margin: 0;
     font-size: 2.5rem;
     font-weight: 700;
+    line-height: 100%;
 }
 .contact-icon {
     width: 25.49px;
 }
 .desc {
     margin-top: 25px;
-    
 }
 .section-desc {
     font-size: 1.7rem;
     font-weight: 500;
     color: #505050;
-    line-height: 1.7;
+    line-height: 30px;
     margin: 0 auto;
     text-align: center;
 }
@@ -531,6 +552,7 @@ a {
     width: 160px;
     color: #505050;  
     margin-top: 10px;
+    line-height: 33px;
 }
 input[type="text"],
 input[type="email"] {
@@ -544,6 +566,7 @@ input[type="email"] {
     margin-inline: auto;
     margin-bottom: 30px;
     outline: none;
+    line-height: 33px;
 }
 textarea {
     width: 100%;
@@ -577,6 +600,7 @@ input[type="submit"] {
     border-radius: 0.7rem;
     font-family: "Noto Sans JP",sans-serif;
     font-weight: 700;
+    line-height: 33px;
 }
 input[type="submit"]:hover {
     color: #0D96A0;
@@ -610,12 +634,14 @@ input[type="submit"]:hover {
     color: #ffffff;
     font-size: 2rem;
     font-weight: 700;
+    line-height: 33px;
 }
 .footer_copyright {
     color: #fff;
     font-size: 2rem;
     margin-top: 30px;
     font-weight: 700; 
+    line-height: 33px;
 }
 .footer_copyright .logo {
     margin-right: 1em;
@@ -646,7 +672,14 @@ input[type="submit"]:hover {
     filter: brightness(1);
 }
 @media screen and  (max-width: 1024px) {
-  .news-item {
+    .message img {
+        width: 83.75px;
+        position: absolute;
+        right:  10px;
+        bottom: 23px;
+        display: block;
+    }   
+    .news-item {
         display: block; /* 横並びを解除して縦並びに */
     }
     .news-date,
@@ -660,12 +693,29 @@ input[type="submit"]:hover {
         white-space: normal;
     }
     }
+@media screen and (max-width:825px) {
+    .title {
+        margin-left: 90px;
+    } 
+    .message p {
+        white-space: normal; 
+        overflow-wrap: break-word;
+        word-break: keep-all;
+    }    
+    .message img {
+        width: 83.75px;
+        position: absolute;
+        right:  10px;
+        bottom: 23px;
+        display: block;
+    }   
+    }
 @media screen and (min-width:769px) {
     .pc_none{
         display: none!important;
     }  
     .title {
-        margin-left: 40px;   
+        margin-left: 80px;
     }
     .sp-only {
         display: block;
@@ -723,6 +773,7 @@ input[type="submit"]:hover {
     }
     .main_copy h1 {
         font-size: 3rem;
+        line-height: 40px;
     }
     .br-sp {
         display: inline;
@@ -1040,12 +1091,13 @@ input[type="submit"]:hover {
     bottom: 0;  
   }
   .main_copy p {
-    font-size: 1.25rem;
+    font-size: 2rem;
     margin-bottom: 7px;
   }
   .main_copy h1 {
-    font-size: 1.84375rem;
+    font-size: 2.84375rem;
     max-width: 100%;
+    line-height: 50px;
   }
   .br-sp {
     display: none;
@@ -1062,6 +1114,9 @@ input[type="submit"]:hover {
   .strengths-text-area2 p {
     width: 100%;
   }
+  .news-item a {
+    grid-template-columns: none; 
+}
   .address-text .post,
   .address-text .address {
     display: inline-block;
